<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- <include layout="@layout/common_center_small_titlebar" /> -->

    <com.huika.lib.core.ext.views.JazzyViewPager
    android:id="@+id/pager"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1" />

    <!--<fragment-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:name="com.huika.hkmall.ui.index.fragment.HKServiceFragment"-->
        <!--android:id="@+id/fragment"-->
        <!--android:layout_gravity="center_horizontal" />-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/tab_divider" />

    <LinearLayout
        android:id="@+id/page_indicator"
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:layout_gravity="bottom"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_icon_more"
                style="@style/main_tab_icon"
                android:src="@drawable/selector_main_tab_more" />

            <TextView
                style="@style/main_tab_tv"
                android:layout_below="@+id/tab_icon_more"
                android:text="@string/common_huifen" />

            <TextView
                android:id="@+id/numberTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-7dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/tab_icon_more"
                android:background="@drawable/icon_badge"
                android:gravity="center"
                android:padding="1dp"
                android:text="18"
                android:textColor="#ffffffff"
                android:textSize="8sp"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_icon_pingou"
                style="@style/main_tab_icon"
                android:src="@drawable/selector_main_tab_category" />

            <TextView
                style="@style/main_tab_tv"
                android:layout_below="@+id/tab_icon_pingou"
                android:text="@string/common_consume" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_icon_index"
                style="@style/main_tab_icon"
                android:src="@drawable/selector_main_tab_index" />

            <TextView
                style="@style/main_tab_tv"
                android:layout_below="@+id/tab_icon_index"
                android:text="@string/common_shopping" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_icon_hkservice"
                style="@style/main_tab_icon"
                android:src="@drawable/selector_serivce" />

            <TextView
                style="@style/main_tab_tv"
                android:layout_below="@+id/tab_icon_hkservice"
                android:text="@string/common_hk_service" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_icon_me"
                style="@style/main_tab_icon"
                android:src="@drawable/selector_main_tab_me" />

            <TextView
                style="@style/main_tab_tv"
                android:layout_below="@+id/tab_icon_me"
                android:text="@string/common_me" />

            <ImageView
                android:id="@+id/tab_pop_icon_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/tab_icon_me"
                android:background="@drawable/notice_red_point"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>